Fixed font going too small on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -86,7 +86,7 @@ a:visited {
 p {
     margin-bottom: 1rem;
     text-align: center;
-    font-size: calc(6px + 0.6vw)
+    font-size: calc(0.7rem + 0.2vw)
 }
 
 .timeline-content {
@@ -118,12 +118,12 @@ h2 {
     text-align: center;
 
     .upper {
-        font-size: calc(1rem + 2.5vw);
+        font-size: calc(3rem + 1vw);
         line-height: 0.7;
         display: block;
     }
     .lower {
-        font-size: calc(1rem + 2.5vw);
+        font-size: calc(2rem + 1vw);
         display: block;
     }
 }
